--- a/cadastromobile.css
+++ b/cadastromobile.css
@@ -18,11 +18,12 @@ body{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr ;
+    grid-template-rows: auto ;
     grid-template-areas: 
-    "h h h h h h"
-    "m m m s s s";
+    "h"
+    "m"
+    "s";
 }
 
 header{
@@ -31,6 +32,8 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 110vw;
+    background-size: cover;
 }
 
 main{
@@ -44,20 +47,12 @@ main{
 section{
     grid-area: s;
     background-color: #282828;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 section > form > h1{
     color: #3f3f3f;
-    font-size: 4rem;
-}
-
-footer{
-    grid-area: f;
-    background-color: blueviolet;
+    font-size: 3rem;
+    align-self: center;  
 }
 
 form{
@@ -68,35 +63,35 @@ form{
 form > label{
     margin-top: 0.5vw;
     margin-bottom: 0.25vw;
+    margin-left: 24.3vw;
 }
 
 #lbotao{
     background-color: #00B2FF;
-
 }
 
 input[type="submit"]{
     margin-top: 1vw;
     margin-bottom: 1vw;
     border-radius: 20px;
-    height: 80px;
-    margin-left: 1vw;
+    height: 50px;
+    margin-left: 24.3vw;
     margin-right: 1vw;
-    box-sizing: border-box;
+    margin-top: 6vw;
 }
 
 form > input, form > label{
     font-size: 2rem;
-
 }
 
 form > input{
     border-radius: 20px;
-    height: 60px;
+    height: 40px;
     border: none;
     border-color: black;
-    margin-left: 1vw;
+    margin-left: 24.3vw;
     margin-right: 1vw;
+    width: 60vw;
 }
 
 form > input:focus{
@@ -104,16 +99,3 @@ form > input:focus{
     border: 1px solid rgb(0, 0, 0);
     outline: none;
 }       
-
-@media(max-width:800px){
-    .container{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto auto;
-        grid-template-areas: 
-        "h h h"
-        "m m m"
-        "s s s";
-    }
-    
-}
