--- a/mainmobile.css
+++ b/mainmobile.css
@@ -51,6 +51,14 @@ main {
     padding: 2px 16px;
 }
 
+.cardeum{
+    height: 40vw;
+}
+
+.cardedois{
+    height: 40vw;
+}
+
 /* Overlay para Adicionar Itens */
 
 .modal {
@@ -93,6 +101,8 @@ main {
 
 .cards {
     margin-top: 1vw;
+    display: flex;
+    flex-direction: row;
 }
 
 h1 {
@@ -108,112 +118,73 @@ h1 {
 }
 
 .modalsquare {
-    width: 1000px;
-    height: 600px;
+    width: 300px;
+    height: 660px;
     background-color: #1f1f1f;
     border-radius: 40px;
-    justify-content: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-areas:
-    "l1 rt rt"
-    "l2 r r"
-    "l3 r r";
+        "l1"
+        "l2"
+        "l3";
 }
 
-.addimg{
+.addimg {
+    background-color: #3f3f3f;
+    grid-area: l1;
+    height: 200px;
+    width: 200px;
+    border-radius: 40px;
+    margin-top: 10vw;
+    margin-left: 13.5vw;
+}
+
+.addtitle {
     background-color: #3f3f3f;
     grid-area: l2;
-    height: 400px;
+    height: 50px;
     width: 200px;
     border-radius: 40px;
-    align-self: center;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
 }
 
-.addtitle{
+.addspoiler {
     background-color: #3f3f3f;
-    grid-area: rt;
-    height: 50px;
-    width: 450px;
-    border-radius: 40px;
-    margin-top: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-}
-
-.addspoiler{
-    background-color: #3f3f3f;
-    grid-area: r;
-    height: 150p;
-    width: 450px;
+    grid-area: l2;
+    height: 250px;
+    width: 200px;
     border-radius: 40px;
     margin-bottom: 5vw;
-}
+    margin-top: 10vw;
+    margin-left: 13.5vw;
 
-/* .botaofechar{
-    grid-area: l3;
+} 
+
+#lbotao {
     background-color: #0085FF;
     border-radius: 40px;
     color: white;
     height: 50px;
     width: 200px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    margin-left: 13.5vw;
 }
 
-a:link {
-    text-decoration: none; 
-    color: white;
-}
-
-
-a:visited { 
-    text-decoration: none;
-    color: white; 
-}
-
-
-a:hover { 
-    text-decoration: none; 
-    color: white;
-}
-
-
-a:active { 
-    text-decoration: none; 
-    color: white;
-} */
-
-#lbotao{
-    background-color: #0085FF;
-    border-radius: 40px;
-    color: white;
-    height: 50px;
-    width: 200px;
-}
-
-.botao{
+.botao {
     grid-area: l3;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* Item 2 decorativo para apresentação aka gambiarra*/
+/* Item 2 decorativo para apresentação aka gambiarra */
 
 .carduse {
     visibility: hidden;
 }
 
-.carduse:target{
+.carduse:target {
     visibility: visible;
-    
     transition: all 0.4s;
 }
 
