--- a/cadastro.css
+++ b/cadastro.css
@@ -119,5 +119,19 @@ form > input:focus{
 }
 
 input{
-    padding-left: 10px;
+    padding-left: 10px  ;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+   
+}
+::-webkit-scrollbar-track{
+    background-color: black;
+
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(29, 32, 43);
+
+    
 }
