--- a/config.css
+++ b/config.css
@@ -101,3 +101,17 @@ p{
     width: 200px;
     text-align: right;
 }
+
+::-webkit-scrollbar{
+    width: 5px;
+   
+}
+::-webkit-scrollbar-track{
+    background-color: black;
+
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(29, 32, 43);
+
+    
+}
