--- a/login.css
+++ b/login.css
@@ -121,3 +121,17 @@ form > input:focus{
 input{
     padding-left: 10px;
 }
+
+::-webkit-scrollbar{
+    width: 5px;
+   
+}
+::-webkit-scrollbar-track{
+    background-color: black;
+
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(29, 32, 43);
+
+    
+}
