--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ font-family: 'Stick', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: auto;
 }
 
 body {
@@ -248,4 +249,18 @@ a:active {
     top: 0;
     width: 200px;
     text-align: right;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+   
+}
+::-webkit-scrollbar-track{
+    background-color: black;
+
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(29, 32, 43);
+
+    
 }
