--- a/cadastromobile.css
+++ b/cadastromobile.css
@@ -13,7 +13,7 @@ font-family: 'Stick', sans-serif;
 
 body{
     font-family: 'Alata', sans-serif;
-    background-color: black;
+    background-color: #0D1117;
 }
 
 .container{
@@ -28,7 +28,7 @@ body{
 
 header{
     grid-area: h;
-    background-color: #3f3f3f;
+    background-color: #161B22;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -46,11 +46,11 @@ main{
 
 section{
     grid-area: s;
-    background-color: #282828;
+    background-color: #0D1117;
 }
 
 section > form > h1{
-    color: #3f3f3f;
+    color: #E6EDF3;
     font-size: 3rem;
     align-self: center;  
 }
@@ -58,6 +58,11 @@ section > form > h1{
 form{
     display: flex;
     flex-direction: column;
+    border: #161B22 10px;
+    background-color: #161B22;
+    color: #E6EDF3;
+    border-radius: 40px;
+    padding: 10px;
 }
 
 form > label{
@@ -87,15 +92,18 @@ form > input, form > label{
 form > input{
     border-radius: 20px;
     height: 40px;
-    border: none;
-    border-color: black;
+    border: 3px solid gray;
+    border-color: gray;
     margin-left: 24.3vw;
     margin-right: 1vw;
     width: 60vw;
+    background-color: #0D1117;
+    color: white;
 }
 
 form > input:focus{
-    background-color: #7c7c7c;
-    border: 1px solid rgb(0, 0, 0);
+    background-color: #0D1117;
+    border: 3px solid #00B2FF;
     outline: none;
+    color: white;
 }       
