--- a/login.css
+++ b/login.css
@@ -27,7 +27,7 @@ body{
 
 header{
     grid-area: h;
-    background-color: #3f3f3f;
+    background-color: #161B22;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -43,7 +43,7 @@ main{
 
 section{
     grid-area: s;
-    background-color: #282828;
+    background-color: #0D1117;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,7 +51,7 @@ section{
 }
 
 section > form > h1{
-    color: #3f3f3f;
+    color: #E6EDF3;
     font-size: 4rem;
 }
 
@@ -63,6 +63,11 @@ footer{
 form{
     display: flex;
     flex-direction: column;
+    border: #161B22 10px;
+    background-color: #161B22;
+    color: #E6EDF3;
+    border-radius: 40px;
+    padding: 10px;
 }
 
 form > label{
@@ -70,12 +75,11 @@ form > label{
     margin-bottom: 0.25vw;
 }
 
-#lbotao{
+button{
     background-color: #00B2FF;
-
 }
 
-input[type="submit"]{
+button{
     margin-top: 1vw;
     margin-bottom: 1vw;
     border-radius: 20px;
@@ -92,16 +96,19 @@ form > input, form > label{
 form > input{
     border-radius: 20px;
     height: 60px;
-    border: none;
-    border-color: black;
+    border: 3px solid gray;
+    border-color: gray;
     margin-left: 1vw;
     margin-right: 1vw;
+    background-color: #0D1117;
+    color: white;
 }
 
 form > input:focus{
-    background-color: #7c7c7c7c;
-    border: 1px solid rgb(0, 0, 0);
+    background-color: #0D1117;
+    border: 3px solid #00B2FF;
     outline: none;
+    color: white;
 }       
 
 @media(max-width:800px){
@@ -134,4 +141,10 @@ input{
     background-color: rgb(29, 32, 43);
 
     
+}
+
+#lcheck{
+    width: 30px;
+    height: 30px;
+    display: flex;
 }
