--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ font-family: 'Stick', sans-serif;
 
 body {
     font-family: 'Alata', sans-serif;
-    background-color: black;
+    background-color: #0D1117;
     color: white;
 }
 
@@ -30,7 +30,7 @@ body {
 
 header {
     grid-area: h;
-    background-color: #3f3f3f;
+    background-color: #161B22;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -111,7 +111,7 @@ h1 {
 .modalsquare {
     width: 1000px;
     height: 600px;
-    background-color: #1f1f1f;
+    background-color: #0D1117;
     border-radius: 40px;
     justify-content: center;
     display: grid;
@@ -124,7 +124,7 @@ h1 {
 }
 
 .addimg{
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: l2;
     height: 400px;
     width: 200px;
@@ -137,7 +137,7 @@ h1 {
 }
 
 .addtitle{
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: rt;
     height: 50px;
     width: 450px;
@@ -148,7 +148,7 @@ h1 {
 }
 
 .addspoiler{
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: r;
     height: 150p;
     width: 450px;
