--- a/mainmobile.css
+++ b/mainmobile.css
@@ -13,7 +13,7 @@ font-family: 'Stick', sans-serif;
 
 body {
     font-family: 'Alata', sans-serif;
-    background-color: black;
+    background-color: #0D1117;
     color: white;
 }
 
@@ -29,7 +29,7 @@ body {
 
 header {
     grid-area: h;
-    background-color: #3f3f3f;
+    background-color: #161B22;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -120,7 +120,7 @@ h1 {
 .modalsquare {
     width: 300px;
     height: 660px;
-    background-color: #1f1f1f;
+    background-color: #0D1117;
     border-radius: 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -132,7 +132,7 @@ h1 {
 }
 
 .addimg {
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: l1;
     height: 200px;
     width: 200px;
@@ -142,7 +142,7 @@ h1 {
 }
 
 .addtitle {
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: l2;
     height: 50px;
     width: 200px;
@@ -150,7 +150,7 @@ h1 {
 }
 
 .addspoiler {
-    background-color: #3f3f3f;
+    background-color: #161B22;
     grid-area: l2;
     height: 250px;
     width: 200px;
