--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Stick&display=swap');
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+    
 /* Fontes usadas: Stick(logo e detalhes) e Alata(Textos em geral)
 font-family: 'Alata', sans-serif;
 font-family: 'Stick', sans-serif;
@@ -12,10 +14,16 @@ font-family: 'Stick', sans-serif;
     width: auto;
 }
 
+.botaodebotaroitemnocatalogo{
+    background: transparent;
+    border: none;
+    margin-left: 1rem;
+}
+
 body {
     font-family: 'Alata', sans-serif;
     background-color: #0D1117;
-    color: white;
+    color: white    ;
 }
 
 .container {
@@ -53,7 +61,7 @@ main {
 }
 
 /* Overlay para Adicionar Itens */
-
+/* 
 .modal {
     visibility: hidden;
     opacity: 0;
@@ -67,13 +75,13 @@ main {
     justify-content: center;
     background: rgba(77, 77, 77, 0.7);
     transition: all 0.4s;
-}
-
+} */
+/* 
 .modal:target {
     visibility: visible;
     opacity: 1;
-}
-
+} */
+/* 
 .content {
     border-radius: 4px;
     position: relative;
@@ -81,8 +89,8 @@ main {
     max-width: 90%;
     background: #ffffff;
     padding: 1em 2em;
-}
-
+} */
+/* 
 .modal_content {
     margin-top: 5%;
     display: flex;
@@ -90,7 +98,7 @@ main {
     justify-content: end;
     align-items: center;
     border: 1px 1px black;
-}
+} */
 
 .cards {
     margin-top: 1vw;
@@ -108,7 +116,7 @@ h1 {
     margin-left: 20px;
 }
 
-.modalsquare {
+/* .modalsquare {
     width: 1000px;
     height: 600px;
     background-color: #0D1117;
@@ -154,7 +162,7 @@ h1 {
     width: 450px;
     border-radius: 40px;
     margin-bottom: 5vw;
-}
+} */
 
 /* .botaofechar{
     grid-area: l3;
@@ -190,7 +198,7 @@ a:active {
     text-decoration: none; 
     color: white;
 } */
-
+/* 
 #lbotao{
     background-color: #0085FF;
     border-radius: 40px;
@@ -204,10 +212,10 @@ a:active {
     align-self: center;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
 /* Item 2 decorativo para apresentação aka gambiarra*/
-
+/* 
 .carduse {
     visibility: hidden;
 }
@@ -216,7 +224,7 @@ a:active {
     visibility: visible;
     
     transition: all 0.4s;
-}
+} */
 
 /* Tentativa 2 de fazer o menu */
 
@@ -263,4 +271,101 @@ a:active {
     background-color: rgb(29, 32, 43);
 
     
+}
+
+
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    margin: 10px;
+}
+
+.cadmodal {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    z-index: 999;
+    align-items: center;
+    justify-content: center;
+  }
+ 
+  .modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    width: 50%;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.card{
+    width: 300px;
+}
+
+.cardimagem img{
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+    width: 210px;
+    height: 150px;
+}
+
+.cards img:hover{
+    opacity: 0.7;
+}
+
+.cardinfo {
+    width: 210px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    justify-content: space-around;
+}
+
+.cardnome {
+    color: whitesmoke;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #161B22;
+    text-align: center;
+    margin-top: -5px;
+    padding: 20px;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    
+}
+
+.cardnome p{
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+.btn{
+  display:block;
+}
+
+.btneditar{
+  display: block;
+}
+
+.label{
+    color: black;
+}
+
+input[type="file"]{
+    color: black;
 }
